# Camera

./: CMakeLists.txt  Camera.cpp  Camera.h  ObjectDetectionModel.cpp  ObjectDetectionModel.h  README.md  local_test.cpp  main.cpp
headers/: Camera.h  DatabaseConnection.h  HttpClient.h  ObjectDetectionModel.h  SocketServer.h  StreamCamera.h
src/: Camera.cpp  DatabaseConnection.cpp  HttpClient.cpp  ObjectDetectionModel.cpp  ObjectDetectionModelV1.cpp  SocketServer.cpp  StreamCamera.cpp
tests/: test_2.cpp  test_http_client.cpp  test_modeldetection.cpp  test_modeldetection.h
